Upload full code

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Adalab",
   "license": "MIT",
   "dependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
